--- a/src/components/pagination/style.module.css
+++ b/src/components/pagination/style.module.css
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: center;
 	gap: 3px;
-	padding: 0.75em 1.5em;
+	padding: 0 0 0.75em 0;
 	border-bottom: 1px solid #f2f4f5;
 }
 
