--- a/src/pages/main/main.module.css
+++ b/src/pages/main/main.module.css
@@ -1,7 +1,12 @@
 .main {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 	width: 100%;
-	/* height: 100vh; */
-	gap: 2rem;
+	gap: 1.5rem;
+}
+
+@media (max-width: 768px) {
+	.main {
+		grid-template-columns: 1fr;
+	}
 }
