--- a/src/components/latestNews/style.module.css
+++ b/src/components/latestNews/style.module.css
@@ -2,6 +2,11 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	gap: 32px;
+	gap: 16px;
 	overflow: hidden;
+}
+
+.title {
+	font-size: 24px;
+	font-weight: 500;
 }
