--- a/src/components/search/style.module.css
+++ b/src/components/search/style.module.css
@@ -3,6 +3,7 @@
 	width: 100%;
 	background-color: #fff;
 	gap: 0.75rem;
+	padding: 2px;
 }
 
 .input {
@@ -17,4 +18,11 @@
 input:focus {
 	border: 1px solid #6b4eff;
 	outline: 2px solid #e7e7ff;
+}
+
+.light {
+	background-color: white;
+}
+.dark {
+	background-color: #23272f;
 }
