--- a/src/components/slider/style.module.css
+++ b/src/components/slider/style.module.css
@@ -10,3 +10,12 @@
 	background-color: #fff;
 	cursor: pointer;
 }
+
+.slider.dark .arrow {
+	background-color: #23272f;
+	color: #f6f7f9;
+}
+.slider.light .arrow {
+	background-color: white;
+	color: black;
+}
